fix no-show tooltip on focus; use relative units for tooltip spacing

--- a/app/_assets/stylesheets/badges.less
+++ b/app/_assets/stylesheets/badges.less
@@ -102,7 +102,7 @@
       z-index: 10;
     }
 
-    &:hover {
+    &:hover, &:focus {
        .tooltiptext {
         display: block;
       }
@@ -119,7 +119,7 @@ h2.badge, h3.badge, h4.badge, h5.badge {
       margin-left: 7px;
     }
 
-  &:hover {
+  &:hover, &:focus {
     .tooltiptext {
       left: 7px;
     }
@@ -132,7 +132,7 @@ h1.badge {
       margin-left: 7px;
     }
 
-  &:hover {
+  &:hover, &:focus {
     .tooltiptext {
       right: 0;
       top: 0;
@@ -141,7 +141,7 @@ h1.badge {
 }
 
 h2.badge {
-  &:hover {
+  &:hover, &:focus {
     .tooltiptext {
       top: 3px;
     }
@@ -149,7 +149,7 @@ h2.badge {
 }
 
 h3.badge {
-  &:hover {
+  &:hover, &:focus {
     .tooltiptext {
       top: 4px;
     }
@@ -157,7 +157,7 @@ h3.badge {
 }
 
 h4.badge, h5.badge {
-  &:hover {
+  &:hover, &:focus {
     .tooltiptext {
       top: 5px;
     }
@@ -175,7 +175,7 @@ a.badge {
 
 .badge-container {
     a > .tooltip > .tooltiptext {
-      margin-top: 6px;
+      margin-top: 0.5em;
   }
 }
 
@@ -184,7 +184,7 @@ a.badge {
 table > tbody > tr {
   &:last-of-type {
     .badge {
-      &:hover {
+      &:hover, &:focus {
         .tooltiptext {
           left: 100%;
           bottom: 105%;
